log/build_2024-11-19_08-18-08/vision/stderr.log
  File "/home/vboxuser/ros2_ws/install/vision/lib/python3.8/site-packages/vision/stereo_triangulation.py", line 128
    def
       ^
SyntaxError: invalid syntax

